--- a/janshu-react/package.json
+++ b/janshu-react/package.json
@@ -6,6 +6,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
+    "react-transition-group": "^2.5.3",
     "styled-components": "^4.1.3"
   },
   "scripts": {
