--- a/janshu-react/package.json
+++ b/janshu-react/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
     "react-transition-group": "^2.5.3",
+    "redux": "^4.0.1",
     "styled-components": "^4.1.3"
   },
   "scripts": {
