--- a/janshu-react/package.json
+++ b/janshu-react/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "immutable": "^4.0.0-rc.12",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.5",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
