--- a/janshu-react/package.json
+++ b/janshu-react/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-transition-group": "^2.5.3",
     "redux": "^4.0.1",
